[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Weapons/Bullet.png" type="Texture" id=1]
[ext_resource path="res://weapons/Bullet.gd" type="Script" id=2]
[ext_resource path="res://assets/Music/hit3.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[node name="Bullet" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MoveSpeed" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 0.1, 0.1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="MoveSpeed" to="." method="_on_MoveSpeed_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
